hphp/hack/test/typecheck/primitive_casing_cast.php.exp
File "primitive_casing_cast.php", line 4, characters 11-16:
Keyword `strING` must be written in lowercase (Parsing[1002])
File "primitive_casing_cast.php", line 4, characters 11-16:
Casts are only supported for `bool`, `int`, `float` and `string`. (Naming[2055])
File "primitive_casing_cast.php", line 4, characters 11-16:
Unbound name: `strING` (Naming[2049])
File "primitive_casing_cast.php", line 4, characters 10-21:
Invalid return type (Typing[4110])
  File "primitive_casing_cast.php", line 3, characters 26-31:
  Expected `string`
  File "primitive_casing_cast.php", line 4, characters 11-16:
  But got `strING`
