hphp/hack/test/typecheck/primitive_casing_cast.php
<?hh // partial

function f(varray $arr): string {
  return (strING)$arr;
}
